<resources>
    <string name="app_name">HealthPass</string>
    <string name="start_survey">Start Survey</string>
    <string name="resources">Resources</string>
    <string name="logout">logout</string>
    <string name="qr_code">QR Code</string>
    <string name="location_history">Location History</string>
    <string name="hospitals_near_me">Hospitals Near Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_sccount_sign_up">Don\'t have an account? Click here to Sign up</string>
    <string name="sign_up_for_your_personalized_health_pass_app">Sign up for your personalized health-pass app</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="already_have_an_account_log_in">Already have an account? Click here to Log in</string>
    <string name="view_on_google_maps">View on Google Maps</string>
</resources>
