<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#fffceb">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="55dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        android:padding="10dp"/>

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/log_in"
        android:id="@+id/login"
        android:background="@drawable/custom_button_login"
        android:textColor="#FFF"
        />

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="65dp"
        android:text="@string/don_t_have_an_sccount_sign_up"
        android:textColor="#000"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        app:srcCompat="@drawable/health_pass_logo" />

</RelativeLayout>